# turbo-invention

./: README.md
hashed_block/: Cargo.toml  README.md
hashed_block/src/: main.rs
