[package]
name = "hashed_block"
version = "0.1.1"
edition = "2018"
publish = true
author = "Ali hassan"
email = "wizdwarfs@gmail.com"
description = " Create a hashed block if user provide a data. However data is not dynamic yet. "
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ali2210/turbo-invention/hashed_block"
keywords = ["hashed", "static-data"]
category = ["hash","stdin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
